--- a/assignment_1/pubspec.yaml
+++ b/assignment_1/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  uuid: ^4.5.1
+  intl: ^0.20.2
   # path: ^1.8.0
 
 dev_dependencies:
