--- a/assignment_1/pubspec.yaml
+++ b/assignment_1/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   # path: ^1.8.0
+  server:
+    path: '../server'
+  shared:
+    path: '../shared'
 
 dev_dependencies:
   lints: ^5.0.0
