--- a/assignment_1/pubspec.yaml
+++ b/assignment_1/pubspec.yaml
@@ -2,6 +2,7 @@ name: assignment_1
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.6.1
@@ -11,10 +12,9 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   # path: ^1.8.0
-  server:
-    path: '../server'
   shared:
     path: '../shared'
+  http: ^1.3.0
 
 dev_dependencies:
   lints: ^5.0.0
