--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 # Add regular dependencies here.
 dependencies:
   # path: ^1.8.0
+  intl: ^0.20.2
 
 dev_dependencies:
   lints: ^5.0.0
