--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   latlong2: ^0.9.1
   flutter_map: ^8.1.1
   url_launcher: ^6.1.10
-
+  uuid: ^4.5.1
+  intl: ^0.20.2
+  # path: ^1.8.0
+  shared:
+    path: '../shared'
+  http: ^1.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
