--- a/shared/pubspec.yaml
+++ b/shared/pubspec.yaml
@@ -6,12 +6,14 @@ version: 1.0.0
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: ^3.6.1
+  sdk: ^3.7.2
 
 # Add regular dependencies here.
 dependencies:
   # path: ^1.8.0
   intl: ^0.20.2
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   lints: ^5.0.0
