--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_web_plugins:
+    sdk: flutter
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
   cupertino_icons: ^1.0.8
   latlong2: ^0.9.1
   flutter_map: ^8.1.1
+  geocoding: ^2.1.0
   url_launcher: ^6.1.10
   uuid: ^4.5.1
   intl: ^0.20.2
@@ -43,6 +47,7 @@ dependencies:
   shared:
     path: "../shared"
   http: ^1.3.0
+  flutter_map_cancellable_tile_provider: ^3.1.0
 
 dev_dependencies:
   flutter_test:
