--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   # path: ^1.8.0
+  word_generator: ^0.4.4
+  rxdart: ^0.28.0
+  flutter_bloc: ^8.1.6
   shared:
     path: "../shared"
   http: ^1.3.0
