--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
     path: "../shared"
   http: ^1.3.0
   flutter_map_cancellable_tile_provider: ^3.1.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
