--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   equatable: ^2.0.7
 
 dev_dependencies:
+  bloc_test: ^9.1.0
+  mocktail: ^1.0.0
   flutter_test:
     sdk: flutter
 
