--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -52,8 +52,12 @@ dependencies:
   http: ^1.3.0
   flutter_map_cancellable_tile_provider: ^3.1.0
   equatable: ^2.0.7
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
+
   bloc_test: ^9.1.0
   mocktail: ^1.0.0
   flutter_test:
