--- a/parkingapp/pubspec.yaml
+++ b/parkingapp/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   cloud_firestore: ^6.0.0
+  flutter_local_notifications: ^19.4.0
+  timezone: ^0.10.1
+  flutter_timezone: ^4.1.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
 
